<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/titlebar"
        android:id="@+id/include"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/change_password_old"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/old_pwd"
            android:inputType="textPassword"
            android:textColor="@color/colorMain"
            android:typeface="normal"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/change_password_new"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/change_password_old"
            android:layout_alignStart="@+id/change_password_old"
            android:layout_below="@+id/change_password_old"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/new_pwd"
            android:inputType="textPassword"
            android:textColor="@color/colorMain" />

        <EditText
            android:id="@+id/change_password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/change_password_new"
            android:layout_alignStart="@+id/change_password_new"
            android:layout_below="@+id/change_password_new"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/confirm_pwd"
            android:inputType="textPassword"
            android:textColor="@color/colorMain" />

        <Button
            android:id="@+id/change_password_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/register_button"
            android:text="@string/app_save"
            android:textColor="@color/colorMain"
            android:layout_marginBottom="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/change_password_confirm"
            android:layout_alignStart="@+id/change_password_confirm"
            android:layout_alignRight="@+id/change_password_confirm"
            android:layout_alignEnd="@+id/change_password_confirm" />
    </RelativeLayout>
</LinearLayout>