<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/titlebar"
        android:id="@+id/include"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/forget_password_username"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/app_username"
            android:inputType="textPersonName"
            android:textColor="@color/colorMain"
            android:typeface="normal"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/forget_password_email"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/forget_password_username"
            android:layout_alignStart="@+id/forget_password_username"
            android:layout_below="@+id/forget_password_username"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/app_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorMain" />


        <Button
            android:id="@+id/send_new_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/register_button"
            android:text="@string/send_new_pwd"
            android:textColor="@color/colorMain"
            android:layout_marginBottom="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/forget_password_email"
            android:layout_alignStart="@+id/forget_password_email"
            android:layout_alignRight="@+id/forget_password_email"
            android:layout_alignEnd="@+id/forget_password_email" />
    </RelativeLayout>
</LinearLayout>