<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/account_management_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical|start"
            android:text="@string/app_account_management"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/to_account_management_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_action_chevron_right"
            android:drawableLeft="@drawable/ic_action_chevron_right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/bank_card_setting_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical|start"
            android:text="@string/app_bank_card_setting"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/to_bank_card_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_action_chevron_right"
            android:drawableLeft="@drawable/ic_action_chevron_right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/change_password_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical|start"
            android:text="@string/app_changePwd"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/to_change_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_action_chevron_right"
            android:drawableLeft="@drawable/ic_action_chevron_right" />
    </LinearLayout>
    <!-- 分割线 -->
    <View
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/buttonBorderDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:id="@+id/auto_buy_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical|start"
            android:text="@string/app_auto_buy_on"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/auto_buy_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp" >

        <TextView
            android:id="@+id/message_reminder_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical|start"
            android:text="@string/app_message_reminder"
            android:textColor="@color/textDarkGrey"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/message_reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>